Add module-info.java for the modules. Now the annotation processor is not loaded